# wonk

./: .gitignore  .python-version  LICENSE  README.rst  pyproject.toml  tox.ini
tests/: test_cases.py  test_cli.py  test_config.py  test_models.py  test_optimizer.py  test_policy.py
tests/cases/condition/: README.md
tests/cases/condition/inputs/: with_condition.json
tests/cases/condition/outputs/: output_1.json
tests/cases/different_principals/: README.md
tests/cases/different_principals/inputs/: principal1.json  principal2a.json  principal2b.json  typical.json
tests/cases/different_principals/outputs/: output_1.json
tests/cases/multipass/: README.md
tests/cases/multipass/inputs/: set1.json  set2.json  set3.json  set4.json  set5.json  set6.json  set7.json  set8.json
tests/cases/multipass/outputs/: output_1.json
tests/cases/notaction/: README.md
tests/cases/notaction/inputs/: typical_action.json  typical_notaction.json  typical_notaction_with_wildcards.json  typical_with_wildcards.json
tests/cases/notaction/outputs/: output_1.json
tests/cases/notresource/: README.md
tests/cases/notresource/inputs/: notresource_action.json  notresource_notaction.json  notresource_notaction_with_wildcards.json  notresource_with_wildcards.json  typical.json
tests/cases/notresource/outputs/: output_1.json
tests/cases/shadowed/: README.md
tests/cases/shadowed/inputs/: typical.json  typical_with_wildcards.json
tests/cases/shadowed/outputs/: output_1.json
tests/cases/trivial/: README.md
tests/cases/trivial/outputs/: output_1.json
wonk/: __init__.py  aws.py  cli.py  config.py  constants.py  exceptions.py  models.py  optimizer.py  policy.py
