[tool.poetry]
name = "wonk"
version = "0.6.1"
description = "Wonk is a tool for combining a set of AWS policy files into smaller compiled policy sets."
license = "Apache-2.0"
authors = ["Kirk Strauser <kirk@amino.com>"]
readme = "README.rst"
homepage = "https://github.com/aminohealth/wonk"
repository = "https://github.com/aminohealth/wonk.git"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration"
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26"
ortools = "^9.5"
pydantic = "^1.10"
PyYAML = "^6.0"
toposort = "^1.10"
xdg = "^6.0"

[tool.poetry.dev-dependencies]
black = "*"
docutils = "*"
flake8 = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-mock = "*"
rstcheck = "*"

[tool.poetry.scripts]
wonk = "wonk.cli:handle_command_line"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile="black"
line_length=99

[tool.mypy]
check_untyped_defs=true
ignore_missing_imports=true
files="**/*.py"
